<resources>

    <string name="cp_search_hint_text">食物中文名或拼音</string>
    <string name="cp_cancel">取消</string>
    <string name="cp_no_result">没有找到，换个词试试~</string>
    <string name="cp_locate_failed">查找失败</string>
    <string name="cp_locating">正在查找…</string>
    <string name="app_name">仙人掌</string>
    <string name="action_setting">Setting</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="mplus">M+</string>
    <string name="mminus">M-</string>
    <string name="arrow">-</string>
    <string name="ce">CE</string>
    <string name="c">C</string>
    <string name="plusminus">±</string>
    <string name="correct">√</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mul">*</string>
    <string name="div">/</string>
    <string name="mode">%</string>
    <string name="equal">=</string>
    <string name="dot">.</string>
    <string name="history">历史</string>
    <string name="analysis">分析</string>
    <string name="pk">pk</string>
    <string name="set">设置</string>
    <string name="pedometer">记步</string>
    <string name="Monday">"周一 "</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="sport">运动</string>
    <string name="today">今天</string>
    <string name="_0">0</string>
    <string name="step">步数</string>
    <string name="complete">已完成：</string>
    <string name="_0_">0%</string>
    <string name="_10000">目标：10000</string>
    <string name="averagestep">平均步数</string>
    <string name="sumstep">总步数</string>
    <string name="daoshu">1/x</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
