<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_c"
    android:orientation="vertical"
android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="计算食物热量"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        android:textSize="32dp"/>
<GridLayout
    android:layout_marginRight="50dp"
    android:layout_marginLeft="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"


    android:columnCount="5">


    <EditText
        android:layout_height="60dp"
        android:layout_columnSpan="5"
        android:layout_margin="10dp"
        android:enabled="false"
        android:gravity="right|bottom"
        android:inputType="numberDecimal"
        android:textSize="24sp"
        android:text="0"
        android:id="@+id/showInfo"
        android:hint="请输入您步行的步数"
        android:layout_gravity="fill_horizontal"
        />
    <Button
        style="@style/myStyle"
        android:id="@+id/mc"
        android:text="@string/mc"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/mr"
        android:text="@string/mr"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/ms"
        android:text="@string/ms"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/mplus"
        android:text="@string/mplus"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/minus"
        android:text="@string/minus"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/arrow"
        android:text="@string/arrow"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/ce"
        android:text="@string/ce"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/c"
        android:text="@string/c"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/plusminus"
        android:text="@string/plusminus"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/correct"
        android:text="@string/correct"/>

    <Button
        style="@style/myStyle"
        android:id="@+id/seven"
        android:text="@string/seven"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/eight"
        android:text="@string/eight"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/nine"
        android:text="@string/nine"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/div"
        android:text="@string/div"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/mode"
        android:text="@string/mode"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/four"
        android:text="@string/four"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/five"
        android:text="@string/five"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/six"
        android:text="@string/six"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/mul"
        android:text="@string/mul"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/daoshu"
        android:text="@string/daoshu"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/one"
        android:text="@string/one"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/two"
        android:text="@string/two"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/three"
        android:text="@string/three"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/minus2"
        android:text="@string/minus"/>
    <Button
        style="@style/myStyle"
        android:id="@+id/equal"
        android:text="@string/equal"
        android:layout_rowSpan="2"
        android:layout_height="100dp"
        />
    <Button
        style="@style/myStyle"
        android:text="@string/zero"
        android:id="@+id/zero"
        android:layout_columnSpan="2"
        android:layout_width="120dp"
        />
    <Button
        style="@style/myStyle"
        android:id="@+id/dot"
        android:text="@string/dot"
        />
    <Button
        style="@style/myStyle"
        android:id="@+id/plus"
        android:text="@string/plus"
        />
</GridLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:id="@+id/known_kcal"
        android:text="了解食物热量"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:layout_marginTop="10dp"
        android:id="@+id/known_sport"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="了解运动方式"/>

    <Button
        android:id="@+id/kcalplane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/light_blue"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="我的一天" />
</LinearLayout>